# cookbook

./: .env  .env.sample  .gitattributes  .gitignore  .gitmodules  05_1_ChromaDB.ipynb  82_Gradio_chatpdf.ipynb  LICENSE  PDF_to_Podcast_RAG.ipynb  README.md  Solar Pro2 Prompting Handbook.ipynb  [EN] Solar Pro2 Prompting Handbook.ipynb  financial_analysis.ipynb  function_calling.ipynb  how_to_count_token.ipynb  langgraph_self_rag.ipynb  llamaindex_rag.ipynb  requirements.txt  rxconfig.py  solar.ipynb  upstage.ipynb
usecase/solar-knowledge-management/: .env.example  .gitignore  LICENSE  README-KO.md  README.md  pyproject.toml  requirements.txt
usecase/solar-knowledge-management/backend/image_ocr/: __init__.py  alt_text_generator.py  markdown_processor.py  ocr_processor.py
usecase/solar-knowledge-management/backend/note_freshness/: __init__.py  config.py  models.py
usecase/solar-knowledge-management/backend/note_split/: config.py  models.py
usecase/solar-knowledge-management/backend/related_note/: __init__.py  related_note.py
usecase/solar-knowledge-management/backend/tag_suggest/: __init__.py  markdown_processor.py  (+4 more)
usecase/solar-knowledge-management/frontend/: app.py  home.py  image_ocr.py  note_freshness.py  note_split.py  related_note.py  tag_suggest.py
usecase/solar-knowledge-management/prompts/: atomic_note_generate.yml  ck_recentness_summary.yml  ck_recentness_tavily.yml  ck_recentness_wiki.yml  info_extract_schema.yml  info_extract_template.yml  line_number_update.yml  topic_extract_amend_default.yml  topic_extract_default.yml  topic_extract_diverse.yml
(+667 files in other folders)
